--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
-
 :root {
   --COLOR-PRIMARY: hsl(25, 97%, 53%);
   --COLOR-NEUTRAL-WHITE: hsl(0, 0%, 100%);
@@ -31,6 +29,7 @@ body {
   line-height: 1.6;
   background-color: var(--COLOR-NEUTRAL-VERY-DARK-BLUE);
   font-family: var(--FONT-OVERPASS);
+  font-size: 1.5rem;
 }
 
 .main {
@@ -43,12 +42,12 @@ body {
 
 .ratings__wrapper {
   background-color: var(--COLOR-NEUTRAL-DARK-BLUE);
-  width: 40vw;
-  height: 40vh;
-  padding: 3.2rem;
+  width: 400px;
+  height: 400px;
+  padding: 2.3rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-radius: 10px;
 }
 
@@ -68,12 +67,13 @@ body {
 }
 
 .ratings__question {
+  font-family: var(--FONT-OVERPASS);
   font-size: 3.2rem;
   color: var(--COLOR-NEUTRAL-WHITE);
 }
 
 .ratings__instructions {
-  font-size: 14px;
+  /* font-size: 15px; */
   color: var(--COLOR-NEUTRAL-WHITE);
 }
 
@@ -100,5 +100,20 @@ body {
   justify-content: center;
 }
 
+.ratings__rank:hover {
+  cursor: pointer;
+  /*  background-color: lightgrey; */
+}
+
 .ratings__submit {
+  font: inherit;
+  background-color: var(--COLOR-PRIMARY);
+  text-shadow: none;
+  border: none;
+  height: 4.2rem;
+  border-radius: 20px;
+}
+
+.active {
+  background-color: green;
 }
